<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.test.areacalculator.MainActivity">

    <TextView
        android:id="@+id/length1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="26dp"
        android:text="@string/length1Text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/length2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/length1Text"
        android:layout_alignStart="@+id/length1Text"
        android:layout_below="@+id/length1Text"
        android:layout_marginTop="25dp"
        android:text="@string/length2Text" />

    <EditText
        android:id="@+id/length1InputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/length1Text"
        android:layout_alignBottom="@+id/length1Text"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/length1Text"
        android:layout_toRightOf="@+id/length1Text"
        android:ems="10"
        android:hint="@string/enterLength"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/length2InputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/length1InputField"
        android:layout_alignStart="@+id/length1InputField"
        android:layout_below="@+id/length1InputField"
        android:ems="10"
        android:hint="@string/enterLength"
        android:inputType="textPersonName" />

    <ImageButton
        android:id="@+id/triangleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:srcCompat="@drawable/triangle"
        android:layout_below="@+id/length2InputField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp" />

    <ImageButton
        android:id="@+id/squareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        app:srcCompat="@drawable/square"
        android:layout_alignTop="@+id/triangleButton"
        android:layout_toRightOf="@+id/triangleButton"
        android:layout_toEndOf="@+id/triangleButton" />

    <ImageButton
        android:id="@+id/circleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/squareButton"
        android:layout_toEndOf="@+id/squareButton"
        android:layout_toRightOf="@+id/squareButton"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:id="@+id/shapeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/shape"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_alignLeft="@+id/resultText"
        android:layout_alignStart="@+id/resultText"
        android:layout_alignRight="@+id/length2InputField"
        android:layout_alignEnd="@+id/length2InputField" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shapeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_below="@+id/calculateButton"
        android:layout_alignLeft="@+id/length2InputField"
        android:layout_alignStart="@+id/length2InputField" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/calculateButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/calculateButton"
        android:layout_marginBottom="15dp"
        android:text="@string/clear" />

</RelativeLayout>
